Prevent horizontal scroll

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body {
 	padding-top: 70px;
 	padding-bottom: 70px;
